--- a/src/app/components/list-render/list-render.component.html
+++ b/src/app/components/list-render/list-render.component.html
@@ -4,7 +4,9 @@
     <li *ngFor = "let animal of animals">
 
       Nome: {{animal.name}}, Tipo: {{animal.type}}
+      <button (click) = "showAge(animal)">Show age</button>
     </li>
   </ul>
+  <h3>{{ animalDetails }}</h3>
 
 </div>
