--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,9 @@
 <app-emitter></app-emitter>
 <app-list-render></app-list-render>
 <app-pipes></app-pipes>
-
+<app-componentes-personalizados nome = "Caique" sobrenome = "Fonseca"></app-componentes-personalizados>
+<app-componentes-personalizados nome = "Eliana" sobrenome = "Fonseca"></app-componentes-personalizados>
+<app-components-father></app-components-father>
+<app-components-son></app-components-son>
+<app-services1></app-services1>
+<app-services2></app-services2>
